--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 colorama==0.4.6
 distro==1.9.0
-django==5.0.2
+Django==5.0.2
 django-crispy-forms==2.1
 exceptiongroup==1.2.0
 h11==0.14.0
